--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Not Obvious</title>
 </head>
 <body>
@@ -26,6 +27,10 @@
 
   <div class="hero-image">
 <div class="hero-text">
+  <h1>You Are Not Alone</h1>
+</div>
+
+<div class="hero-text-mobile">
   <h1>You Are Not Alone</h1>
 </div>
 
@@ -297,7 +302,7 @@
 
 </div>
 
-<div class="change">
+<div class="reminder-mobile">
   <h2>They Will Never Change</h2>
   <p class="site-text">No matter what they say, no matter what they do it is important to remember 
     that the narcissists will never change in a way that is meaningful or impactful for you.
