--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         However, many mental health therapists who worked with patients with NPD, as well as researchers 
         who study personality disorders, have identified various possible narcissistic 
         personality disorder types. 
-        They include overt narcissism, covert narcissism, antagonistic narcissism, communal narcissism, <br> and malignant narcissism.
+        They include overt narcissism, covert narcissism, antagonistic narcissism, communal narcissism, and malignant narcissism.
         </p>
        
         <div class=site-button> <button><a href="https://www.verywellhealth.com/narcissistic-personality-disorder-types-5213256#:~:text=They%20include%20overt%20narcissism%2C%20covert,between%20adaptive%20and%20maladaptive%20narcissism.">Learn More</a></button>
