--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
 </div>
 
 <div class="copyright">
-  <p>&copy; Company Name. All rights reserved.</p>
+  <p>&copy; Not Obvious. All rights reserved.</p>
 
 </div>
 
